overflow problem solved

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,11 +19,12 @@
 body {
     font-family: "Poppins", sans-serif;
     color: var(--white);
-    overflow-x: hidden;
+    width: 100vw;
 }
 
 .container {
     background-color: var(--primary-purple-bg);
+    overflow-x: hidden;
 }
 
 .divider {
@@ -51,6 +52,7 @@ body {
 
 .header__logo {
     width: 10rem;
+    overflow: hidden;
 }
 
 .menu__list {
@@ -114,6 +116,7 @@ body {
 
 .home__left::before {
     content: "Javascript Javascript";
+    display: block;
     text-transform: uppercase;
     font-size: 2em;
     position: absolute;
@@ -142,8 +145,10 @@ body {
 
 /* HOME RIGHT */
 .home__right {
-    width: 40vw;
+    width: 40%;
+    height: 50%;
     display: flex;
+    align-items: center;
     justify-content: center;
 }
 
@@ -644,6 +649,11 @@ body {
         padding-top: 4rem;
         flex-direction: column-reverse;
         gap: 7rem;
+    }
+
+    .home__right {
+        width: 100%;
+        height: 30%;
     }
 
     .home__left {
